# krill-kounter-rs

./: .env_sample  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: main.yaml
install/service/: krill-kounter-rs.service
src/: block.rs  config.rs  daemon.rs  device.rs  lib.rs  main.rs
src/utilities/: log_prefix.rs  macros.rs  mod.rs
tests/: test_app.rs  test_config.rs  test_device_entry.rs
tests/common/: mod.rs
