[package]
name = "krillkounter"
version = "1.0.0"
authors = ["Pawel Zalewski <pzalewski@thegoodpenguin.co.uk>"]
description = "A Linux utility for monitoring block device stats"
license = "MIT"
repository = "https://github.com/The-Good-Penguin/krill-kounter-rs"
homepage = "https://github.com/The-Good-Penguin/krill-kounter-rs"
keywords = ["monitoring", "block device"]
categories = ["Command line utilities"]
readme = "README.md"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "krill-kounter-rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
futures = "0.3"
fs-err = "3.1.2"
log = "0.4"
env_logger = "0.11.8"
serde =  {version = "1.0.115", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
nix = { version = "0.30.1", features = ["user"] }
time = { version = "0.3", features = ["macros", "local-offset"] }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3"
dotenvy = "0.15"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
implicit_hasher = "allow"